[package]
name = "libnewsboat-ffi"
version = "2.40.0"
authors = ["Alexander Batischev <eual.jp@gmail.com>"]
edition = "2024"

[dependencies]
libnewsboat = { path="../libnewsboat" }
libc = "0.2"
cxx = "1"

[build-dependencies]
cxx-build = "1"

[lib]
name = "newsboat"
crate-type = ["staticlib"]

[lints]
workspace = true
