[package]
name = "libnewsboat"
version = "2.19.1"
authors = ["Alexander Batischev <eual.jp@gmail.com>"]

[dependencies]
strprintf = { path="../strprintf" }

chrono = "0.4"
rand = "0.5"
once_cell = "0.1.6"
regex = "1.0"
url = "1.7"
dirs = "1.0.4"
xdg = "2.2.0"
backtrace = "= 0.3"
unicode-width = "0.1.5"
nom = "^4.1"
curl-sys = "0.4.5"
libc = "0.2"
gettext-rs = "0.4.1"
natord = "1.0.9"

# We don't use the following crates, but we pin their versions to make sure
# that Newsboat builds with Rust 1.25 and later.
libz-sys = "= 1.0.17"

# The following constraints close security holes
# https://rustsec.org/advisories/RUSTSEC-2019-0009
# https://rustsec.org/advisories/RUSTSEC-2019-0012
smallvec = ">= 0.6.10"

[dependencies.clap]
version = "2.33"
# This disables three features, for the following reasons:
# - "suggestions" and "color" features: we provide our own help text, so don't
#   need those
# - "vec_map": this provides "a slight performance improvement" at the cost of
#   an additional dependency. At the time of writing Rust is still a new kid on
#   the block, distros are still figuring out the ways to package crates, so
#   I want as little dependencies as practically possible.
default-features = false

[dependencies.gettext-sys]
version = "0.19.8"
# Don't let the crate build its own copy of gettext; force it to use the one
# built into glibc.
features = [ "gettext-system" ]

[dev-dependencies]
tempfile = "3"
proptest = "0.7"
section_testing = "0.0.4"
