[package]
name = "regex-rs"
version = "0.1.0"
authors = ["Alexander Batischev <eual.jp@gmail.com>"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strprintf = { path="../strprintf" }

bitflags = "2.11"
libc = ">=0.2.69"
gettext-rs = "0.7.7"
